[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruf-common"
version = "2.0.3"
description = "Functions common to several of Brian's Python projects."
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Brian Ruf", email = "Brian@RufRisk.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["utilities", "common", "helpers"]
dependencies = [
    "loguru>=0.7.3",
    "elementpath>=4.7.0",
    "pytz>=2025.2",
    "tzlocal>=5.3.1",
    "geopy>=2.4.1",
    "timezonefinder>=8.1.0",
    "aiohttp>=3.12.15",
    "requests>=2.31.0",
    "pycountry>=22.3.5",
    "html2text>=2020.1.16",
    "packaging>=23.1",
    "pyyaml>=6.0.2"
]

[project.urls]
Homepage   = "https://github.com/brian-ruf/ruf-common-python"
Repository = "https://github.com/brian-ruf/ruf-common-python.git"
Documentation = "https://github.com/brian-ruf/ruf-common-python/blob/main/docs/README.md"
Issues = "https://github.com/brian-ruf/ruf-common-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ruf_common*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["ruf_common"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
